--- a/Assembly-CSharp-vs.csproj
+++ b/Assembly-CSharp-vs.csproj
@@ -108,6 +108,7 @@
      <Compile Include="Assets\AstarPathfindingProject\changelog.cs" />
      <Compile Include="Assets\Scripts\GUI\DialogueBox.cs" />
      <Compile Include="Assets\Scripts\GUI\DrawInventory.cs" />
+     <Compile Include="Assets\Scripts\GUI\MainGUI.cs" />
      <Compile Include="Assets\Scripts\GUI\MouseCursor.cs" />
      <Compile Include="Assets\Scripts\InteractMode.cs" />
      <Compile Include="Assets\Scripts\Inventory.cs" />
